--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "heroicons": "^2.2.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
