--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "heroicons": "^2.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
+    "motion": "^12.9.4",
     "next": "^15.1.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
